--- a/app/src/main/res/layout/fragment_edit_traits_list.xml
+++ b/app/src/main/res/layout/fragment_edit_traits_list.xml
@@ -20,12 +20,12 @@
         tools:listitem="@layout/fragment_edit_abilities_list_item" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/add_ability"
+        android:id="@+id/add_trait"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:contentDescription="@string/action_add_ability"
+        android:contentDescription="@string/action_add_trait"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_input_add"
