--- a/Android/app/src/main/res/layout/fragment_edit_traits_list.xml
+++ b/Android/app/src/main/res/layout/fragment_edit_traits_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.editmonster.EditTraitListFragment">
+    tools:context=".ui.editmonster.EditTraitsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
