--- a/Android/app/src/main/res/layout/fragment_edit_armor.xml
+++ b/Android/app/src/main/res/layout/fragment_edit_armor.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <!-- // TODO: Make this a stepper instead of a text field -->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,6 +39,7 @@
             android:text="@string/label_has_a_shield"
             android:textSize="20sp" />
 
+        <!-- // TODO: Make this a stepper instead of a text field -->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
