--- a/Android/app/src/main/res/layout/component_advantage_picker.xml
+++ b/Android/app/src/main/res/layout/component_advantage_picker.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/text_margin"
     tools:context=".ui.components.AdvantagePicker">
+    <!-- // TODO: style this control to look less awful by default -->
 
     <TextView
         android:id="@+id/label"
